Add method for handling creation of ConfigMap from existing one
Signed-off-by: Lukas Kral <lukywill16@gmail.com>

use createConfigMap instead of writing some new method

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

fix ownerreference

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

changes after Jakub's review

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Jakub's comments + remove forbidden chars from connector name in MM2

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

remove normalizeConnector and instead use name of the resource in the label

Signed-off-by: Lukas Kral <lukywill16@gmail.com>